<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="adb_keyboard_label">AdbKeyboard</string>
    <string name="agent_die">:agent is die</string>
    <string name="agent_live">:agent is live</string>
    <string name="app_name">聚兴助手</string>
    <string name="atx_agent">ATX-Agent</string>
    <string name="avaible_internal_storage">内部存储:</string>
    <string name="avaible_sd_storage">SD卡:</string>
    <string name="barrier_free">无障碍服务</string>
    <string name="develop_mode">开发者选项</string>
    <string name="hello_world">Hello world!</string>
    <string name="identify">识别本机</string>
    <string name="monitor_service_text">IP</string>
    <string name="monitor_service_ticker">UIAutomator service started</string>
    <string name="monitor_service_title">UIAutomator</string>
    <string name="no_permission_tip">No permission to write sd card</string>
    <string name="quit">关闭所有服务</string>
    <string name="search_menu_title">Search</string>
    <string name="shot_cut">快捷方式</string>
    <string name="start_atxagent">启动ATXAGENT</string>
    <string name="start_uiautomator">启动UIAutomator</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop_atxagent">停止ATXAGENT</string>
    <string name="stop_uiautomator">停止UIAutomator</string>
</resources>
